Fix min width and scrollbar for pakkit

--- a/pakkit.css
+++ b/pakkit.css
@@ -1,5 +1,6 @@
 body {
     color: rgba(255, 255, 255, 0.8);
+    min-width: 581px;
 }
 
 .hex {
@@ -17,4 +18,25 @@ body {
 
 .hex-viewer .hex span.selected, .hex-viewer .asc span.selected, .hex-viewer .annotations .line.selected {
     background: #c90!important;
+}
+
+::-webkit-scrollbar {
+     width: 17px;
+ }
+
+::-webkit-scrollbar-thumb {
+    background: rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+}
+::-webkit-scrollbar-track {
+    background: rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: rgba(0, 0, 0, 0.5);
+}
+
+::-webkit-scrollbar-corner {
+    background: #242424;
 }
